tests/compile_fail/unknown_attr_arg.rs
use named::named;

#[named(defaults(a = false, c = false))]
fn or(a: bool, b: bool) -> bool {
    a || b
}

fn main() {}
