tests/compile_fail/unknown_attr_arg.stderr
error: Unrecognized argument - attribute had argument `c` but function takes arguments: [a, b]
 --> $DIR/unknown_attr_arg.rs:3:29
  |
3 | #[named(defaults(a = false, c = false))]
  |                             ^
